finally fixed css not showing up (i forgot the link element 💀)

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-h1 {
-    background-color: rgb(231, 151, 86);
+#main {
+    background-color: aquamarine;
 }
